<resources>
    <string name="app_name">Smart TV</string>

    <!-- Generic -->
    <string name="about">About</string>
    <string name="auto_discovery">Auto discovery</string>
    <string name="bouquet">Bouquet</string>
    <string name="bouquets">Bouquets</string>
    <string name="channel">Channel</string>
    <string name="close">Close</string>
    <string name="description">Description</string>
    <string name="device">Device</string>
    <string name="devices">Devices</string>
    <string name="device_name">Device name</string>
    <string name="epg_events">EPG events</string>
    <string name="empty">Empty</string>
    <string name="event">Event</string>
    <string name="event_now">Event now</string>
    <string name="event_next">Event next</string>
    <string name="hostname_or_ip">Hostname or IP</string>
    <string name="imdb">IMDb</string>
    <string name="next">Next</string>
    <string name="picon">Picon</string>
    <string name="receiver">Receiver</string>
    <string name="receiver_type">Receiver type</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="trailer">Trailer</string>
    <string name="zap">Zap</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Snackbar -->
    <string name="snackbar_app_not_available_imdb">IMDb app not available.</string>
    <string name="snackbar_app_not_available_chrome">Chrome app not available.</string>
    <string name="snackbar_app_not_available_youtube">YouTube app not available.</string>
    <string name="snackbar_control_volume_failed">Volume control failed.</string>
    <string name="snackbar_load_bouquets_failed">Loading bouquets failed.</string>
    <string name="snackbar_load_channels_failed">Loading channels failed.</string>
    <string name="snackbar_load_epg_events_failed">Loading EPG events failed.</string>
    <string name="snackbar_please_define_settings">Please define settings.</string>
    <string name="snackbar_invalid_ip_address">Invalid IP address.</string>
    <string name="snackbar_zap_failed">Zap failed.</string>

    <!-- Package names -->
    <string name="package_name_imdb">com.imdb.mobile</string>
    <string name="package_name_chrome">com.android.chrome</string>
    <string name="package_name_youtube">com.google.android.youtube</string>
</resources>
