<?xml version="1.0" encoding="utf-8"?>
<android.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.preference.PreferenceCategory
        android:key="pref_key_receiver"
        android:title="@string/receiver">
        <android.preference.SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_key_receiver_auto_discovery"
            android:title="@string/auto_discovery" />
        <android.preference.ListPreference
            android:dependency="pref_key_receiver_auto_discovery"
            android:entries="@array/receiver_types"
            android:entryValues="@array/receiver_type_values"
            android:key="pref_key_receiver_type"
            android:title="@string/receiver_type" />
        <android.preference.EditTextPreference
            android:dependency="pref_key_receiver_auto_discovery"
            android:inputType="text"
            android:key="pref_key_receiver_address"
            android:title="@string/hostname_or_ip" />
    </android.preference.PreferenceCategory>
</android.preference.PreferenceScreen>