<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/card_view"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageViewPicon"
                android:contentDescription="@string/picon"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_tv"/>

            <TextView
                android:id="@+id/textViewChannelTitle"
                android:text="@string/channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="bottom|start"
                android:layout_toLeftOf="@+id/imageButtonZap"
                android:layout_toRightOf="@+id/imageViewPicon"
                android:layout_toEndOf="@+id/imageViewPicon"
                android:layout_toStartOf="@+id/imageButtonZap"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_above="@+id/includeEPGItems" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imageButtonZap"
                android:text="@string/zap"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:scaleType="fitEnd"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:tint="@color/image_button_state_list"
                app:srcCompat="@drawable/ic_play_circle_filled"
                android:clickable="true"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <include
                layout="@layout/epg_items"
                android:id="@+id/includeEPGItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewPicon" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>